<resources>
    <string name="app_name">MyRatioCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="RatioOf">Ratio of</string>
    <string name="Ratio_Input_A">Enter Ratio A</string>
    <string name="Ratio_Input_B">Enter Ratio B</string>
    <string name="Ratio_Symbol">:</string>
    <string name="With_Numbers">with numbers</string>
    <string name="Ratio_Number_A">Enter Number A</string>
    <string name="Ratio_Number_B">Enter Number B</string>
    <string name="Calculate_Button">Calculate</string>
    <string name="Display_Screen">Answer:</string>
    <string name="Default_Value">0</string>
</resources>
