<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/Ratio_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:gravity="center"
        android:text="@string/RatioOf"
        android:textSize="@dimen/text_Size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Ratio_Value_A"
        android:layout_width="@dimen/Ratio_Input_Size"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Ratio_Symbol"
        android:layout_below="@+id/with_numbers"
        android:layout_toLeftOf="@+id/Ratio_Symbol"
        android:layout_toStartOf="@+id/Ratio_Symbol"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Ratio_Input_A"
        android:inputType="number"
        android:textColorHint="@color/colorRatioInput"
        android:textSize="@dimen/text_Size" />

    <EditText
        android:id="@+id/Ratio_Value_B"
        android:layout_width="@dimen/Ratio_Input_Size"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Ratio_Symbol"
        android:layout_below="@id/Ratio_Text"
        android:layout_toEndOf="@+id/Ratio_Symbol"
        android:layout_toRightOf="@+id/Ratio_Symbol"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Ratio_Input_B"
        android:inputType="number"
        android:textColorHint="@color/colorRatioInput"
        android:textSize="@dimen/text_Size" />

    <EditText
        android:id="@+id/Number_Value_A"
        android:layout_width="@dimen/Ratio_Input_Size"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ratio_Symbol2"
        android:layout_below="@+id/with_numbers"
        android:layout_toLeftOf="@+id/ratio_Symbol2"
        android:layout_toStartOf="@+id/ratio_Symbol2"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Ratio_Number_A"
        android:inputType="number"
        android:textColorHint="@color/colorRatioInput"
        android:textSize="@dimen/text_Size" />

    <EditText
        android:id="@+id/Number_Value_B"
        android:layout_width="@dimen/Ratio_Input_Size"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/Number_Value_A"
        android:layout_toEndOf="@+id/ratio_Symbol2"
        android:layout_toRightOf="@id/ratio_Symbol2"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Ratio_Number_B"
        android:inputType="number"
        android:textColorHint="@color/colorRatioInput"
        android:textSize="@dimen/text_Size" />

    <TextView
        android:id="@+id/Ratio_Symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_below="@id/Ratio_Text"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="@dimen/Horizontal_Space"
        android:layout_marginRight="@dimen/Horizontal_Space"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/Vertical_Space"
        android:text="@string/Ratio_Symbol"
        android:textSize="@dimen/text_Size" />

    <TextView
        android:id="@+id/ratio_Symbol2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/with_numbers"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_marginLeft="@dimen/Horizontal_Space"
        android:layout_marginRight="@dimen/Horizontal_Space"
        android:layout_marginTop="@dimen/Vertical_Space"
        android:text="@string/Ratio_Symbol"
        android:textSize="@dimen/text_Size" />

    <TextView
        android:id="@+id/with_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/Ratio_Symbol"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/Vertical_Space"
        android:gravity="center"
        android:text="@string/With_Numbers"
        android:textSize="@dimen/text_Size" />

    <Button
        android:id="@+id/CalculateButton"
        android:layout_width="@dimen/Calc_Btn_Width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/Vertical_Space"
        android:layout_below="@+id/ratio_Symbol2"
        android:background="@color/colorCalculateButton"
        android:textColor="@color/colorCalculateText"
        android:text="@string/Calculate_Button"
        android:textSize="@dimen/Calc_Text_Size"/>

    <TextView
        android:id="@+id/DisplayScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/CalculateButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/Vertical_Space"
        android:background="@color/colorDisplayScrnBckgr"
        android:gravity="start"
        android:hint="@string/Display_Screen"
        android:textColorHint="@color/colorDisplayScrnText"
        android:textSize="@dimen/text_Size" />

</RelativeLayout>
